; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_dashenc.c_format_date_now.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_dashenc.c_format_date_now.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tm = type { i32 }

@.str = private unnamed_addr constant [18 x i8] c"%Y-%m-%dT%H:%M:%S\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c".%03dZ\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @format_date_now to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @format_date_now(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tm*, align 8
  %6 = alloca %struct.tm, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %12 = call i32 (...) @av_gettime()
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = sdiv i32 %13, 1000
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = sdiv i32 %15, 1000
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %8, align 4
  %18 = load i32, i32* %9, align 4
  %19 = mul nsw i32 %18, 1000
  %20 = sub nsw i32 %17, %19
  store i32 %20, i32* %10, align 4
  %21 = call %struct.tm* @gmtime_r(i32* %9, %struct.tm* %6)
  store %struct.tm* %21, %struct.tm** %5, align 8
  %22 = load %struct.tm*, %struct.tm** %5, align 8
  %23 = icmp ne %struct.tm* %22, null
  br i1 %23, label %24, label %45

24:                                               ; preds = %2
  %25 = load i8*, i8** %3, align 8
  %26 = load i32, i32* %4, align 4
  %27 = load %struct.tm*, %struct.tm** %5, align 8
  %28 = call i32 @strftime(i8* %25, i32 %26, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), %struct.tm* %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %33, label %30

30:                                               ; preds = %24
  %31 = load i8*, i8** %3, align 8
  %32 = getelementptr inbounds i8, i8* %31, i64 0
  store i8 0, i8* %32, align 1
  br label %45

33:                                               ; preds = %24
  %34 = load i8*, i8** %3, align 8
  %35 = call i32 @strlen(i8* %34)
  store i32 %35, i32* %11, align 4
  %36 = load i8*, i8** %3, align 8
  %37 = load i32, i32* %11, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i8, i8* %36, i64 %38
  %40 = load i32, i32* %4, align 4
  %41 = load i32, i32* %11, align 4
  %42 = sub nsw i32 %40, %41
  %43 = load i32, i32* %10, align 4
  %44 = call i32 @snprintf(i8* %39, i32 %42, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i32 %43)
  br label %45

45:                                               ; preds = %30, %33, %2
  ret void
}

declare dso_local i32 @av_gettime(...) #1

declare dso_local %struct.tm* @gmtime_r(i32*, %struct.tm*) #1

declare dso_local i32 @strftime(i8*, i32, i8*, %struct.tm*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
